Resolved issues of: gd not installed, jpegptim not installed, invalid csrf token

--- a/src/Members/Bundle/ManagementBundle/Resources/views/Security/login.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Security/login.html.twig
@@ -22,7 +22,7 @@
                         action="{{ path("fos_user_security_check") }}" 
                         method="post"
                         >
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
 
                     
                     <input type="text" 
