--- a/src/Members/Bundle/ManagementBundle/Resources/views/Security/bigLogin.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Security/bigLogin.html.twig
@@ -88,7 +88,7 @@
                             action="{{ path("fos_user_security_check") }}" 
                             method="post"
                             >
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
                         <input type="text" 
                                id="username" 
                                name="_username" 
